# ONTrack

./: .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  TODO.md  build.sh  buildozer.spec  flake.nix  gradle.properties  main.py  ontrack.spec  pyproject.toml  pytest.ini  renovate.jsonc  requirements.txt
assets/: convert.py
assets/themes/: ontrack.jsonc
core/: solver.py
docs/: gen.sh
installer/: build_info.jsonc  build_installer.sh  installer.spec  ontrack_installer.py
src/: lib.rs
